# cpp-perf-foundations

./: .gitignore  README.md
.github/workflows/: day1-ci.yml
day1-cmake-ci/: CMakeLists.txt  README.md  build_and_test.sh
day1-cmake-ci/src/: CMakeLists.txt  calculator.hpp  main.cpp
day1-cmake-ci/tests/: CMakeLists.txt  test_calculator.cpp
day2-header-library/: CMakeLists.txt  README.md
day2-header-library/tests/: CMakeLists.txt  test_vec3_basics.cpp
